# rust-postgres

./: .env  Cargo.toml  README.md  docker-compose.yaml  postman.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
migrations/: 20231030050940_init.down.sql  20231030050940_init.up.sql  20231030190646_enum.up.sql  20231101003948_status.down.sql  20231101003948_status.up.sql
src/: enums.rs  handler.rs  main.rs  model.rs  route.rs  schema.rs
tests/: tests.rs
