[package]
name = "jury-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
sqlx = "0.7.2"
reqwest = {version = "0.11.22", features = ["json"]}
tokio = {version = "1.33.0", features = ["full"]}
serde = "1.0.190"

[dev-dependencies]
rstest = "0.18.2"